# HL2Patcher

./: README.md  app.py  build-macos.sh  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
modals/: install_git_modal.py  install_homebrew_modal.py  install_homebrew_packages_modal.py  install_python_modal.py  install_xcode_cli_modal.py  install_xcode_modal.py  patch_failed_modal.py  patch_in_progress_modal.py  patch_successful_modal.py
pages/: before_patch_page.py  not_supported_page.py  patch_config_page.py  start_page.py
services/: command_runner_service.py  page_navigation_service.py  patcher_service.py  system_checker_service.py  tools_checker_service.py
src/: app.py  main.py
src/pages/: patch_config_page.py
