[project]
name = "HL2Patcher"
version = "1.0.2"
description = "HL2Patcher makes Half-Life 2 playable on modern ARM Macs that only support 64-bit apps. Its goal is to simplify the process into an easy-to-use app, so anyone can enjoy the game again without hassle."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kacper Jarosławski", email = "kacper.jaroslawski@kzl21.ovh" }
]
dependencies = [
  "flet==0.27.6",
  "pyperclip==1.9.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "ovh.kzl21"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "HL2Patcher"

# company name to display in about app dialogs
company = "Kacper Jarosławski"

# copyright text to display in about app dialogs
copyright = "Copyright (c) 2025 Kacper Jarosławski"

[tool.flet.app]
path = "."

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}